[gd_scene load_steps=2 format=3 uid="uid://7vyit5tuh64q"]

[ext_resource type="Script" path="res://settings/audio_settings_ui.gd" id="1_c32ji"]

[node name="AudioSettingsUi" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("1_c32ji")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="BackToSettingsBtn" type="Button" parent="Panel"]
layout_mode = 1
offset_left = 18.0
offset_top = 18.0
offset_right = 149.0
offset_bottom = 49.0
text = "Back to settings"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -139.0
offset_right = 121.5
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="MuteAllControls" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MuteAllToggle" type="CheckButton" parent="Panel/VBoxContainer/MuteAllControls"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MuteAllControls"]
layout_mode = 2
text = "Mute all"

[node name="MusicControls" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/MusicControls"]
layout_mode = 2
text = "Music"

[node name="VolumeMusicSlider" type="HSlider" parent="Panel/VBoxContainer/MusicControls"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="MuteMusicToggle" type="CheckButton" parent="Panel/VBoxContainer/MusicControls"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/MusicControls"]
layout_mode = 2
text = "Mute"

[node name="SfxControls" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/SfxControls"]
layout_mode = 2
text = "Sfx"

[node name="VolumeSfxSlider" type="HSlider" parent="Panel/VBoxContainer/SfxControls"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="MuteSfxToggle" type="CheckButton" parent="Panel/VBoxContainer/SfxControls"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/SfxControls"]
layout_mode = 2
text = "Mute"

[connection signal="pressed" from="Panel/BackToSettingsBtn" to="." method="_on_back_to_settings_btn_pressed"]
[connection signal="toggled" from="Panel/VBoxContainer/MuteAllControls/MuteAllToggle" to="." method="_on_mute_all_toggle_toggled"]
[connection signal="value_changed" from="Panel/VBoxContainer/MusicControls/VolumeMusicSlider" to="." method="_on_volume_music_slider_value_changed"]
[connection signal="toggled" from="Panel/VBoxContainer/MusicControls/MuteMusicToggle" to="." method="_on_mute_music_toggle_toggled"]
[connection signal="value_changed" from="Panel/VBoxContainer/SfxControls/VolumeSfxSlider" to="." method="_on_volume_sfx_slider_value_changed"]
[connection signal="toggled" from="Panel/VBoxContainer/SfxControls/MuteSfxToggle" to="." method="_on_mute_sfx_toggle_toggled"]
